--- a/less/styles.less
+++ b/less/styles.less
@@ -41,15 +41,16 @@ html,
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 .navbar {
   .row();
   justify-content: space-between;
-  border: 1px solid pink;
   height: 4rem;
   width: 100%;
   .leftNav {
-    margin: 0 1rem;
+    margin: 0 5rem;
     display: inline;
     .rowAligned();
     .brandName {
@@ -58,7 +59,7 @@ body {
   }
   .rightNav {
     .rowAligned();
-    margin: 0 1rem;
+    margin: 0 5rem;
     .linksList {
       .row();
       list-style: none;
@@ -74,6 +75,46 @@ body {
           }
         }
       }
+    }
+  }
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  align-self: center;
+  .column();
+  align-items: center;
+  justify-content: center;
+  .contentSub {
+    margin-top: -2rem;
+
+    max-width: 1000px;
+    width: 1000px;
+    .rowAligned();
+    .contentLeft {
+      flex: 3;
+      .header {
+        font-family: "Lato", sans-serif;
+        font-size: 5rem;
+      }
+      .subText {
+        font-family: "Hind Siliguri", sans-serif;
+      }
+      .exploreBtn {
+        padding: 1rem 2rem;
+        background-color: rgb(250, 168, 16);
+        color: white;
+        font-family: "Lato", sans-serif;
+        border: 1px solid white;
+        font-size: @fontSize;
+        border-radius: 2rem;
+      }
+    }
+    .contentRight {
+      flex: 1;
+      height: 100%;
+      width: 100%;
     }
   }
 }
