--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,15 @@
   align-items: center;
   justify-content: center;
 }
+.orangeTextMixin {
+  color: #faa810;
+}
+.lato {
+  font-family: "Lato", sans-serif;
+}
+.hindSiliguri {
+  font-family: "Hind Siliguri", sans-serif;
+}
 html,
 body {
   margin: 0;
@@ -165,4 +174,65 @@ body {
 }
 .aboutCon .aboutSub .orangeText {
   color: #faa810;
+}
+#services {
+  margin-bottom: 10rem;
+  width: 100%;
+  height: 100vh;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#services .servicesSub {
+  max-width: 1000px;
+  width: 1000px;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+}
+#services .servicesSub .servicesTop {
+  text-align: center;
+  line-height: 4px;
+  padding: 0;
+  margin: 0;
+  height: 20%;
+}
+#services .servicesSub .servicesTop h2 {
+  font-family: "Lato", sans-serif;
+}
+#services .servicesSub .servicesTop h4 {
+  color: #faa810;
+  font-family: "Hind Siliguri", sans-serif;
+}
+#services .servicesSub .servicesBottom {
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+#services .servicesSub .servicesBottom .service {
+  margin: 0 1rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+#services .servicesSub .servicesBottom .service .serviceTop {
+  height: 50%;
+}
+#services .servicesSub .servicesBottom .service .serviceBottom {
+  height: 50%;
+  text-align: center;
+}
+#services .servicesSub .servicesBottom .service .serviceBottom h3 {
+  font-family: "Lato", sans-serif;
+  text-align: center;
+}
+#services .servicesSub .servicesBottom .service .serviceBottom h6 {
+  font-family: "Hind Siliguri", sans-serif;
+  text-align: center;
 }
