--- a/less/styles.less
+++ b/less/styles.less
@@ -36,6 +36,19 @@
   .centered();
 }
 
+.orangeTextMixin {
+  color: rgb(250, 168, 16);
+}
+
+//font-mixins
+.lato {
+  font-family: "Lato", sans-serif;
+}
+
+.hindSiliguri {
+  font-family: "Hind Siliguri", sans-serif;
+}
+
 //Styles
 html,
 body {
@@ -95,17 +108,17 @@ body {
     .contentLeft {
       flex: 3;
       .header {
-        font-family: "Lato", sans-serif;
+        .lato();
         font-size: 5rem;
       }
       .subText {
-        font-family: "Hind Siliguri", sans-serif;
+        .hindSiliguri();
       }
       .exploreBtn {
         padding: 1rem 2rem;
         background-color: rgb(250, 168, 16);
         color: white;
-        font-family: "Lato", sans-serif;
+        .lato();
         border: 1px solid white;
         font-size: @fontSize;
         border-radius: 2rem;
@@ -123,7 +136,7 @@ body {
   padding: 1rem 2rem;
   background-color: rgb(250, 168, 16);
   color: white;
-  font-family: "Lato", sans-serif;
+  .lato();
   border: 1px solid white;
   font-size: @fontSize;
   border-radius: 2rem;
@@ -151,11 +164,11 @@ body {
       height: 100%;
       div {
         h2 {
-          font-family: "Lato", sans-serif;
+          .lato();
           font-size: 3.5rem;
         }
         h4 {
-          font-family: "Hind Siliguri", sans-serif;
+          .hindSiliguri();
         }
         button {
           .btn();
@@ -164,6 +177,63 @@ body {
     }
     .orangeText {
       color: rgb(250, 168, 16);
+    }
+  }
+}
+
+#services {
+  margin-bottom: 10rem;
+  width: 100%;
+  height: 100vh;
+  align-self: center;
+  .column();
+  .centered();
+  .servicesSub {
+    max-width: 1000px;
+    width: 1000px;
+    height: 70vh;
+    .column();
+    .servicesTop {
+      text-align: center;
+      line-height: 4px;
+      padding: 0;
+      margin: 0;
+      height: 20%;
+      h2 {
+        .lato();
+      }
+      h4 {
+        .orangeTextMixin();
+        .hindSiliguri();
+      }
+    }
+    .servicesBottom {
+      height: 80%;
+      .row();
+      align-items: center;
+      justify-content: space-around;
+      .service {
+        margin: 0 1rem;
+        height: 100%;
+        .column();
+        align-items: center;
+        align-content: center;
+        .serviceTop {
+          height: 50%;
+        }
+        .serviceBottom {
+          height: 50%;
+          text-align: center;
+          h3 {
+            .lato();
+            text-align: center;
+          }
+          h6 {
+            .hindSiliguri();
+            text-align: center;
+          }
+        }
+      }
     }
   }
 }
