--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-@media (min-width: 768px) {
-  body {
-    font-size: 1.6rem;
-  }
-}
 .row {
   display: flex;
   flex-direction: row;
@@ -29,6 +24,22 @@
 }
 .hindSiliguri {
   font-family: "Hind Siliguri", sans-serif;
+}
+.fWidth {
+  width: 100%;
+}
+.fHeight {
+  height: 100%;
+}
+.noMargin {
+  margin: 0;
+}
+.noPadding {
+  padding: 0;
+}
+.noMarginPadding {
+  margin: 0;
+  padding: 0;
 }
 html,
 body {
@@ -106,6 +117,7 @@ body {
 }
 .content .contentSub .contentLeft .subText {
   font-family: "Hind Siliguri", sans-serif;
+  font-size: 1.1rem;
 }
 .content .contentSub .contentLeft .exploreBtn {
   padding: 1rem 2rem;
@@ -162,6 +174,7 @@ body {
 }
 .aboutCon .aboutSub .aboutSubRight div h4 {
   font-family: "Hind Siliguri", sans-serif;
+  font-size: 1.1rem;
 }
 .aboutCon .aboutSub .aboutSubRight div button {
   padding: 1rem 2rem;
@@ -201,6 +214,7 @@ body {
 }
 #services .servicesSub .servicesTop h2 {
   font-family: "Lato", sans-serif;
+  font-size: 3.5rem;
 }
 #services .servicesSub .servicesTop h4 {
   color: #faa810;
@@ -234,5 +248,61 @@ body {
 }
 #services .servicesSub .servicesBottom .service .serviceBottom h6 {
   font-family: "Hind Siliguri", sans-serif;
+  font-size: 1.1rem;
   text-align: center;
+}
+.testimonials {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.testimonials .testimonialsSub {
+  max-width: 1000px;
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.testimonials .testimonialsSub .testimonialsLeft {
+  padding: 2rem;
+  flex: 2;
+  height: 100%;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h3,
+.testimonials .testimonialsSub .testimonialsLeft div h4,
+.testimonials .testimonialsSub .testimonialsLeft div h5,
+.testimonials .testimonialsSub .testimonialsLeft div h6 {
+  font-family: "Hind Siliguri", sans-serif;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h2 {
+  font-size: 3.5rem;
+  font-family: "Lato", sans-serif;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h3 {
+  font-size: 2rem;
+  color: #faa810;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h4 {
+  font-size: 1.2rem;
+  line-height: 1rem;
+  padding: 0;
+  margin: 0.6rem 0;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h5 {
+  font-size: 1.1rem;
+  line-height: 1rem;
+  margin: 0;
+  padding: 0;
+  color: lightgray;
+}
+.testimonials .testimonialsSub .testimonialsLeft div h6 {
+  font-size: 1rem;
+  overflow-wrap: break-word;
+}
+.testimonials .testimonialsSub .testimonialsRight {
+  height: 100%;
+  flex: 1;
 }
