fixed minor changed

--- a/less/styles.less
+++ b/less/styles.less
@@ -118,33 +118,36 @@ body {
   height: 100vh;
 }
 .navbar {
-  .row();
-  justify-content: space-between;
-  height: 4rem;
-  .fWidth();
-  .leftNav {
-    margin: 0 5rem;
-    display: inline;
-    .rowAligned();
-    .brandName {
-      font-family: "Pattaya", sans-serif;
+  .column();
+  .alignItems(center);
+  .navbarSub {
+    .row();
+    justify-content: space-between;
+    height: 4rem;
+    .width(1000px);
+    max-width: 1000px;
+    .leftNav {
+      display: inline;
+      .rowAligned();
+      .brandName {
+        font-family: "Pattaya", sans-serif;
+        .fontSize(1.6rem);
+      }
     }
-  }
-  .rightNav {
-    .rowAligned();
-    margin: 0 5rem;
-    .linksList {
-      .row();
-      list-style: none;
-      .linkItem {
-        margin: @margin;
-        .link {
-          text-decoration: none;
-          .textLink {
-            font-size: @fontSize;
-            color: black;
-            font-weight: 800;
-            font-family: "Catamaran", sans-serif;
+    .rightNav {
+      .rowAligned();
+      .linksList {
+        .row();
+        list-style: none;
+        .linkItem {
+          margin: @margin;
+          .link {
+            text-decoration: none;
+            .textLink {
+              .lato();
+              font-size: @fontSize;
+              color: black;
+            }
           }
         }
       }
@@ -176,6 +179,7 @@ body {
         .fontSize(1.1rem);
       }
       .exploreBtn {
+        text-decoration: none;
         padding: 1rem 2rem;
         // background-color: rgb(250, 168, 16);
         .backgroundColor(rgb(250, 168, 16));
@@ -231,10 +235,11 @@ body {
         }
         h4 {
           .hindSiliguri();
-          .fontSize(1.1rem);
+          .fontSize(1.6rem);
         }
-        button {
+        a {
           .btn();
+          text-decoration: none;
         }
       }
     }
@@ -269,6 +274,7 @@ body {
       h4 {
         .orangeTextMixin();
         .hindSiliguri();
+        .fontSize(1.6rem);
       }
     }
     .servicesBottom {
@@ -304,6 +310,7 @@ body {
 }
 
 .testimonials {
+  padding-top: 6rem;
   .fWidth();
   .height(100%);
   .column();
@@ -318,6 +325,11 @@ body {
       .padding(2rem);
       flex: 2;
       .fHeight();
+      .contactContainer {
+        .row();
+        .justifyContent(space-between);
+        .alignItems(center);
+      }
       div {
         h3,
         h4,
@@ -349,6 +361,11 @@ body {
         h6 {
           .fontSize(1rem);
           overflow-wrap: break-word;
+        }
+        a {
+          margin-top: 2rem;
+          text-decoration: none;
+          .btn();
         }
       }
     }
