--- a/css/styles.css
+++ b/css/styles.css
@@ -50,45 +50,49 @@ body {
 }
 .navbar {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.navbar .navbarSub {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 4rem;
-  width: 100%;
+  width: 1000px;
+  max-width: 1000px;
 }
-.navbar .leftNav {
-  margin: 0 5rem;
+.navbar .navbarSub .leftNav {
   display: inline;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-.navbar .leftNav .brandName {
+.navbar .navbarSub .leftNav .brandName {
   font-family: "Pattaya", sans-serif;
+  font-size: 1.6rem;
 }
-.navbar .rightNav {
+.navbar .navbarSub .rightNav {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 0 5rem;
 }
-.navbar .rightNav .linksList {
+.navbar .navbarSub .rightNav .linksList {
   display: flex;
   flex-direction: row;
   list-style: none;
 }
-.navbar .rightNav .linksList .linkItem {
+.navbar .navbarSub .rightNav .linksList .linkItem {
   margin: 1rem;
 }
-.navbar .rightNav .linksList .linkItem .link {
+.navbar .navbarSub .rightNav .linksList .linkItem .link {
   text-decoration: none;
 }
-.navbar .rightNav .linksList .linkItem .link .textLink {
+.navbar .navbarSub .rightNav .linksList .linkItem .link .textLink {
+  font-family: "Lato", sans-serif;
   font-size: 1.6rem;
   color: black;
-  font-weight: 800;
-  font-family: "Catamaran", sans-serif;
 }
 .content {
   width: 100%;
@@ -120,6 +124,7 @@ body {
   font-size: 1.1rem;
 }
 .content .contentSub .contentLeft .exploreBtn {
+  text-decoration: none;
   padding: 1rem 2rem;
   background-color: #faa810;
   color: white;
@@ -174,9 +179,9 @@ body {
 }
 .aboutCon .aboutSub .aboutSubRight div h4 {
   font-family: "Hind Siliguri", sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.6rem;
 }
-.aboutCon .aboutSub .aboutSubRight div button {
+.aboutCon .aboutSub .aboutSubRight div a {
   padding: 1rem 2rem;
   background-color: #faa810;
   color: white;
@@ -184,6 +189,7 @@ body {
   border: 1px solid white;
   font-size: 1.6rem;
   border-radius: 2rem;
+  text-decoration: none;
 }
 .aboutCon .aboutSub .orangeText {
   color: #faa810;
@@ -219,6 +225,7 @@ body {
 #services .servicesSub .servicesTop h4 {
   color: #faa810;
   font-family: "Hind Siliguri", sans-serif;
+  font-size: 1.6rem;
 }
 #services .servicesSub .servicesBottom {
   height: 80%;
@@ -252,6 +259,7 @@ body {
   text-align: center;
 }
 .testimonials {
+  padding-top: 6rem;
   width: 100%;
   height: 100%;
   display: flex;
@@ -270,6 +278,12 @@ body {
   padding: 2rem;
   flex: 2;
   height: 100%;
+}
+.testimonials .testimonialsSub .testimonialsLeft .contactContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .testimonials .testimonialsSub .testimonialsLeft div h3,
 .testimonials .testimonialsSub .testimonialsLeft div h4,
@@ -301,6 +315,17 @@ body {
 .testimonials .testimonialsSub .testimonialsLeft div h6 {
   font-size: 1rem;
   overflow-wrap: break-word;
+}
+.testimonials .testimonialsSub .testimonialsLeft div a {
+  margin-top: 2rem;
+  text-decoration: none;
+  padding: 1rem 2rem;
+  background-color: #faa810;
+  color: white;
+  font-family: "Lato", sans-serif;
+  border: 1px solid white;
+  font-size: 1.6rem;
+  border-radius: 2rem;
 }
 .testimonials .testimonialsSub .testimonialsRight {
   height: 100%;
