no overflow and smooth scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,8 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 .navbar {
   display: flex;
