--- a/less/styles.less
+++ b/less/styles.less
@@ -116,6 +116,8 @@ body {
   .noMarginPadding();
   .width(100vw);
   height: 100vh;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 .navbar {
   .column();
