--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ body {
   height: 4rem;
   width: 1000px;
   max-width: 1000px;
+  position: fixed;
 }
 .leftNav {
   display: inline;
@@ -73,6 +74,8 @@ body {
 .brandName {
   font-family: "Pattaya", sans-serif;
   font-size: 1.6rem;
+  color: black;
+  text-decoration: none;
 }
 .rightNav {
   display: flex;
