--- a/less/styles.less
+++ b/less/styles.less
@@ -129,6 +129,7 @@ body {
   height: 4rem;
   .width(1000px);
   max-width: 1000px;
+  position: fixed;
 }
 .leftNav {
   display: inline;
@@ -137,6 +138,8 @@ body {
 .brandName {
   font-family: "Pattaya", sans-serif;
   .fontSize(1.6rem);
+  color: black;
+  text-decoration: none;
 }
 .rightNav {
   .rowAligned();
